added background credit
http://media.steampowered.com/apps/csgo/blog/images/contentBkndTexture.jpg

--- a/static/info/index.html
+++ b/static/info/index.html
@@ -43,6 +43,7 @@
 
 		<p>Thanks to Fabrizio Bianchi for his amazing <a href="https://codepen.io/fbrz/pen/mpiFE">loading animation</a>.</p>
 
+		<p>Background image ripped and modified from <a href="http://media.steampowered.com/apps/csgo/blog/images/contentBkndTexture.jpg">here</a>.</p>
 		
 		<h3 class="title">Q&A</h3>
 
