--- a/static/info/index.html
+++ b/static/info/index.html
@@ -76,11 +76,11 @@
 		<br>
 		<br>
 		<p>Q: I see a camera that shows a vulnerable person or is invading someone's privacy, what can I do?</p>
-		<p>A: If you see a camera that is invading someone's privacy please report it by <a href="https://github.com/qwazwsx/c4-cams/issues">submitting an issue on GitHub</a>. The purpose of this site is <b>not</b> to invade anyone's privacy. Unfortunately, people simply don't take the proper measures to ensure their cameras are secure. If you know anybody with cameras in their house please get them to add a password to their camera. </p>
+		<p>A: If you see a camera that is invading someone's privacy please report it by <a href="https://github.com/qwazwsx/c4-cams/issues">submitting an issue on GitHub</a>. The purpose of this site is <b>not</b> to invade anyone's privacy. Unfortunately, people simply don't take the proper measures to ensure their cameras are secure. </p>
 		<br>
 		<br>
 		<p>Q: How accurate is the location on the map?</p>
-		<p>A: The location comes from where the IP address of the camera is assigned to. This is only accurate down to a few miles or so. It is impossible to find exact locations from these cameras.</p>
+		<p>A: The location comes from where the IP address of the camera is assigned to. This is only accurate down to a few miles or so. It is impossible to find exact locations from these cameras. This site uses <a href="https://extreme-ip-lookup.com">"extreme ip lookup"</a> to get locations on the client side.</p>
 		<br>
 		<br>
 		<p>Q: What's the best way I can contact you?</p>
