--- a/static/top/index.html
+++ b/static/top/index.html
@@ -19,11 +19,11 @@
 			<h1> C4-CAMS </h1>
 		</div>
 		<div class="nav">
-			<a href="/c4-cams/" class="item"> RANDOM </a>
+			<a href="/" class="item"> RANDOM </a>
 			<p class="divider"> | </p>
-			<a href="/c4-cams/top" class="item selected"> TOP </a>
+			<a href="/top" class="item selected"> TOP </a>
 			<p class="divider"> | </p>
-			<a href="/c4-cams/info" class="item"> INFO </a>
+			<a href="/info" class="item"> INFO </a>
 		</div>
 	</div>
 	
