--- a/static/random/index.html
+++ b/static/random/index.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" href="/c4-cams/css/material.blue_grey-green.min.css">
 	<script defer src="/c4-cams/js/material.min.js"></script>
 	<link href="/c4-cams/css/style.css" rel="stylesheet">
+	<script>if (window.location.host !== "c4-cams.qwazwsx.xyz"){window.location.href = "http://c4-cams.qwazwsx.xyz"+window.location.pathname;}</script>
+
 	
 </head>
 
