--- a/static/info/index.html
+++ b/static/info/index.html
@@ -84,11 +84,16 @@
 		<p>A: The location comes from where the IP address of the camera is assigned to. This is only accurate down to a few miles or so. It is impossible to find exact locations from these cameras. This site uses <a href="https://extreme-ip-lookup.com">"extreme ip lookup"</a> to get locations on the client side.</p>
 		<br>
 		<br>
+		<p>Q: Do you have ads/sell data/track users etc
+		<p>A: Nope, and this site never will. Your IP is only stored when you vote on a post. This is so 1). you can only vote once and 2). so that you can see what you have voted on before. I have never and will never sell this or give that info out.
+		<br>
+		<br>
 		<p>Q: What's the best way I can contact you?</p>
 		<p>A: You can <a href="https://github.com/qwazwsx/c4-cams/issues">contact me on my GitHub</a> and we can figure out the best method for communication from there. If private communication is required my PGP public key can be found on my <a href="https://keybase.io/qwazwsx">Keybase account</a> or in <a href=publickey.txt>this text file</a>.</p>
 		<br>
 
 		<p style="font-size:4px">tl;dr: submit an issue on my github :P</p>
+
 
 
 
